# ratatui-file-picker

./: Cargo.toml  README.md
examples/: basic.rs  file_preview.rs  light_and_dark_theme.rs  scratch.txt
src/: file_explorer.rs  main.rs  widget.rs
src/input/: crossterm.rs  mod.rs  termion.rs  termwiz.rs
