[package]
name = "fpicker"
version = "0.1.2"
edition = "2021"
authors = ["Daylan Nance"]
description = "ratatui-file-picker allows you to select multiple files from a tree and add their content or paths to clipboard. It also returns the absolute paths of selected files on exit."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/confucianfighter/ratatui-file-picker.git"
repository = "https://github.com/confucianfighter/ratatui-file-picker.git"
keywords = ["picker", "ratatui", "terminal", "file", "explorer"]
categories = ["command-line-interface", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.28.1", optional = true }
termion = { version = "4.0.2", optional = true }
termwiz = { version = "0.22", optional = true }

ratatui = { version = "0.28.1", features = ["unstable-widget-ref"] }
derivative = "2.2"
copypasta = "0.10.1"

[features]
default = ["crossterm"]
crossterm = ["dep:crossterm"]
termion = ["dep:termion"]
termwiz = ["dep:termwiz"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
[[bin]]
name = "fpicker"
path = "src/main.rs"